# lookup

./: .env.example  .gitignore  Justfile  README.md  pyproject.toml
api/: __init__.py  app.py  deps.py  settings.py
api/routes/: catalog.py  geo.py  horizon.py  now.py  passes.py  sky_track.py  tle_freshness.py
api/schemas/: requests.py  responses.py
core/: __init__.py  _types.py
core/catalog/: __init__.py  celestrak.py  fetcher.py  search.py  tle_cache.py  tle_designator.py  tle_parser.py
core/orbital/: __init__.py  angular.py  passes.py  refraction.py  tracking.py
core/terrain/: __init__.py  dem_cache.py  fetcher.py  horizon.py  mask_cache.py  opentopo.py
core/trains/: __init__.py  clustering.py  discovery.py
core/visibility/: __init__.py  darkness.py  filter.py  magnitude.py  sunlit.py
docs/: accuracy-log.md  follow-ups.md
scripts/: demo.py  regenerate_iss_nyc_baseline.py  serve.sh  verify_accuracy.py
tests/: conftest.py
tests/api_unit/: test_app.py  test_catalog_route.py  test_elevation.py  test_error_handlers.py  test_geo_route.py  test_horizon_route.py  test_passes_route.py  test_passes_schema_fields.py  test_schemas.py  test_sky_track_route.py  test_tle_freshness_route.py
tests/golden/: test_iss_nyc.py
tests/integration/: conftest.py  test_api_end_to_end.py  test_now_routes.py  test_train_query_empty.py  test_train_query_returns_train.py
tests/unit/: test_angular.py  test_celestrak.py  test_darkness.py  test_dem_cache.py  test_discovery.py  test_filter.py  test_horizon.py  test_horizon_depression.py  test_magnitude.py  test_mask_cache.py  test_naked_eye_visible.py  test_now_response_schemas.py  test_opentopo.py  test_pass_endpoint_range.py  test_passes.py  test_peak_angular_speed.py  test_refraction.py  test_refraction_in_altaz.py  test_request_schemas.py  (+12 more)
web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
(+242 files in other folders)
