[project]
name = "satellite-visibility-core"
version = "0.1.0"
description = "Pure Python satellite-visibility engine"
requires-python = ">=3.11"
dependencies = [
  "skyfield>=1.49",
  "rapidfuzz>=3.9",
  "numpy>=1.26",
  "httpx>=0.27",
  "rasterio>=1.3",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "golden: end-to-end tests against hand-verified reference data",
]

[tool.coverage.run]
source = ["core"]
branch = true

[tool.coverage.report]
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api"]
